[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/novel/BaseChapter.gd" type="Script" id=1]
[ext_resource path="res://src/novel/actions/DialogueAction.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/interface/gui/DialogueBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/novel/actions/CameraAction.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/music/The Protomen - Act II - Intermission.ogg" type="AudioStream" id=5]
[ext_resource path="res://src/interface/transition/Transition.tscn" type="PackedScene" id=6]

[node name="Chapter" type="Node"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="DialogueBox" parent="." instance=ExtResource( 3 )]
mouse_filter = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Actions" type="Node" parent="."]

[node name="DialogueAction" parent="Actions" instance=ExtResource( 2 )]
dialog_file_path = "res://assets/dialogs/chapter1.json"

[node name="CameraAction" parent="Actions" instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Transition" parent="." instance=ExtResource( 6 )]
anchor_left = 0.0
mouse_filter = 2

[node name="Background" type="Sprite" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="Actions/DialogueAction" to="." method="_on_DialogueAction_finished"]
[connection signal="fade_finished" from="Transition" to="." method="_on_Transition_fade_finished"]
